--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press the button to Start</h1>
+  <input type="button" class="start mybtn" value="Start">
   <div class="container">
     <div lass="row">
 
