--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1 id="level-title">Press the button to Start</h1>
-  <input type="button" class="start mybtn" value="Start">
+  <input type="button" class="mybtn" value="Start">
   <div class="container">
     <div lass="row">
 
