--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="utf-8">
   <title>Simon</title>
   <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 
 <body>
   <h1 id="level-title">Press the button to Start</h1>
-  <input type="button" class="mybtn" value="Start">
+  <input type="button" class="mybtn" value="Start" id="arey">
   <div class="container">
     <div lass="row">
 
